--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,9 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  font-size: 62.5%;
 }
-
-
-
-
-
+ 
 
 
 /* Estilos para telas grandes (desktops) */
@@ -53,7 +50,7 @@
 }
 
 /* Estilos para telas pequenas (smartphones) */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   body {
       font-size: 14px;
   }
@@ -71,10 +68,10 @@
       width: 100%;
       margin-bottom: 10px;
   }
-}
+} */
 
 /* Estilos para telas muito pequenas (smartphones em modo retrato) */
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .header {
       font-size: 1rem;
   }
@@ -84,4 +81,4 @@
   .main-content {
       padding: 0;
   }
-}
+} */
