I add new tool to work with

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .container {
     /* width: 100%; */
-    background-color: rebeccapurple;
-    height: 50px;
+    background-color: rgb(220, 193, 247);
+    min-height: 100vw;
+    font-size: 1.6em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.child {
-    background-color: aquamarine;
-    height: 50px;
-    width: 10%;
+.container > h1, p {
+    width: 50%;
+    /* background-color: aquamarine; */
+    margin: 0 auto;
+    padding-top: 1rem;
 }
