--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-
-
 /* Estilos Globais */
 * {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -25,49 +23,17 @@ p {
 a {
     font-size: 1.6em !important;
 }
- 
+
 
 
 /* Estilos para telas grandes (desktops) */
-@media (min-width: 1200px) {
-  
-}
+@media (min-width: 1200px) {}
 
 /* Estilos para telas médias (tablets) */
-@media (min-width: 768px) and (max-width: 1199px) {
-  
-}
+@media (min-width: 768px) and (max-width: 1199px) {}
 
 /* Estilos para telas pequenas (smartphones) */
-/* @media (max-width: 767px) {
-  body {
-      font-size: 14px;
-  }
-  .container {
-      padding: 0 10px;
-  }
-  .header {
-      font-size: 1.25rem;
-  }
-  .main-content {
-      display: block;
-  }
-  .sidebar,
-  .content {
-      width: 100%;
-      margin-bottom: 10px;
-  }
-} */
+@media (max-width: 767px) {}
 
 /* Estilos para telas muito pequenas (smartphones em modo retrato) */
-/* @media (max-width: 480px) {
-  .header {
-      font-size: 1rem;
-  }
-  .container {
-      padding: 0 5px;
-  }
-  .main-content {
-      padding: 0;
-  }
-} */
+@media (max-width: 480px) {}
