--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -9,6 +9,7 @@ header {
     align-items: center;
     width: 100vw;
     padding: 0px 1rem;
+    background-color: var(--menu_color);
 }
 
 .lateral_navBar {
@@ -19,14 +20,16 @@ header {
     justify-content: space-between;
     height: 100vh;
     width: 25rem;
-    background-color: violet;
-    width: 0px;
+    background-color: var(--menu_color);
+    /* width: 0px; */
     overflow-x: hidden;
-    transition: ease 0.4s all;
+    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transform: translateX(-100%);
 }
 
 .open {
-    width: 25rem;
+    /* width: 25rem; */
+    transform: translateX(0%);
 }
 
 .top-menu-content {
@@ -35,7 +38,7 @@ header {
 }
 
 .logo-top-menu {
-    width: 9rem;
+    width: 10rem;
 }
 
 .lateral-logo {
@@ -82,11 +85,87 @@ header {
     border-radius: 50%;
 }
 
+.logo_and_icon_container {
+    display: flex;
+    height: 5.6rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu_icon:last-child {
+    padding: var(--padding_icon);
+}
+
+.menu_title_container,
+.menu_acccount_container {
+    margin: 0rem 1.6rem;
+}
+
+
+.title_lateral_menu {
+    display: block;
+    padding: 0rem 0rem 1.6rem 0rem;
+    font-size: 1.2rem;
+    color: var(--cor-texto-e-icon);
+    font-weight: 600;
+}
+
+.li_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* flex-grow: 1; */
+    padding: 0px;
+    /* height: 70%; */
+    row-gap: 0.4rem;
+}
+
+.li_container a li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    background-color: thistle;
+    height: 4.4rem;
+}
+
+.li_container a {
+    color: var(--cor-principal);
+    text-decoration: none;
+}
+
+
 .li_container a li p {
     white-space: nowrap;
+    font-size: 1.6rem !important;
+}
+
+.li_container .list-icon {
+    color: var(--cor-texto-e-icon);
+    margin: 1.2rem;
+    font-size: 2rem;
+    padding: 0px;
+}
+
+.line_and_title_menu {
+    margin: 0px 1.6rem;
+}
+
+.buttons_container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.4rem;
+}
+
+.buttons_container button {
+    padding: 1.2rem 0rem;
+}
+
+.menu_piece {
+    flex-grow: 1;
 }
 
 .navBar_footer {
     display: flex;
     white-space: nowrap;
+    justify-content: space-evenly;
 }
