--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -17,19 +17,49 @@ header {
     position: fixed;
     top: 0px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between !important;
     height: 100vh;
     width: 25rem;
     background-color: var(--menu_color);
     /* width: 0px; */
-    overflow-x: hidden;
-    transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden !important;
+    transition: transform, width 0.8s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translateX(-100%);
+    z-index: 10;
 }
 
 .open {
     /* width: 25rem; */
     transform: translateX(0%);
+}
+
+.menu_icon {
+    z-index: 6;
+    cursor: pointer;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Fundo preto semitransparente */
+    z-index: 5;
+    /* Deve estar atrás do menu lateral */
+    /* display: none; */
+    opacity: 0;
+    transition: opacity 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+    /* Oculto por padrão */
+
+}
+
+
+.showOverlay {
+    z-index: 5;
+    opacity: 1;
+    display: block;
 }
 
 .top-menu-content {
@@ -50,10 +80,32 @@ header {
     width: 100%;
 }
 
+.logo_and_icon_container {
+    display: flex;
+    height: 5.6rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu_icon:last-child {
+    padding: var(--padding_icon);
+    padding-bottom: 1.6rem;
+}
+
+.menu_title_container,
+.menu_acccount_container,
+.search_input input {
+    margin: 0rem 1.6rem;
+}
+
+
+/* Input de busca Side Menu */
+
 .search_input {
     display: inline-flex;
     position: relative;
-    width: 2.4rem;
+    width: 100%;
+    margin-bottom: 1.6rem;
     /* background-color: rebeccapurple; */
 }
 
@@ -63,15 +115,28 @@ header {
 
 }
 
+
 .search_input input {
-    width: 0px;
+    display: inline-flex;
+    width: 100% !important;
     border: none;
+    background-color: white;
+    border-radius: var(--border-Radius);
+    padding-left: 3.2rem;
 }
+
+.search_input input::placeholder {
+    /* display: inline-flex; */
+    /* padding-left: 3.2rem; */
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
 
 .search_input button {
     display: flex;
     position: absolute;
-    right: 0px;
+    left: 1.5rem;
     align-items: center;
     outline: none;
     border: none;
@@ -85,22 +150,8 @@ header {
     border-radius: 50%;
 }
 
-.logo_and_icon_container {
-    display: flex;
-    height: 5.6rem;
-    align-items: center;
-    justify-content: space-between;
-}
 
-.menu_icon:last-child {
-    padding: var(--padding_icon);
-}
-
-.menu_title_container,
-.menu_acccount_container {
-    margin: 0rem 1.6rem;
-}
-
+/* Titulos menu */
 
 .title_lateral_menu {
     display: block;
@@ -124,19 +175,29 @@ header {
     list-style: none;
     display: flex;
     align-items: center;
-    background-color: thistle;
+    /* background-color: var(--cor-principal); */
     height: 4.4rem;
+    border-radius: var(--border-Radius);
+}
+
+.li_container a li:hover {
+    background-color: var(--cor-principal-hover);
+}
+
+.li_container a li:hover>p,
+.li_container a li:hover>span {
+    color: white;
 }
 
 .li_container a {
-    color: var(--cor-principal);
+    color: var(--cor-texto-e-icon);
     text-decoration: none;
 }
 
 
 .li_container a li p {
     white-space: nowrap;
-    font-size: 1.6rem !important;
+    font-size: clamp(1.2rem, var(--side-menu-font-size), 1.8rem) !important;
 }
 
 .li_container .list-icon {
@@ -157,12 +218,21 @@ header {
 }
 
 .buttons_container button {
-    padding: 1.2rem 0rem;
+    padding: 1rem 0rem;
+    border-radius: var(--border-Radius);
+    border: none;
+    font-size: 1.2rem;
+}
+
+.buttons_container button:last-child {
+    background-color: var(--cor-principal);
+    color: white;
 }
 
 .menu_piece {
     flex-grow: 1;
 }
+
 
 .navBar_footer {
     display: flex;
