--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@
 
     /* Colors */
     --menu_color: #F5F5F5;
-    --padding_icon: 10px;
+    --padding_icon: 1.6rem;
 
     /* Cores da Paleta de Delivery */
 
     /* Cor Principal para Botões e Chamadas de Ação */
     --cor-principal: #4CAF50;
+    --cor-principal-hover: #4caf4f9f;
     /* Verde Folha */
 
     /* Cor de Destaque para Detalhes e Promoções */
@@ -28,6 +29,12 @@
     --cor-texto-e-icon: #757575;
     /* Cinza Médio */
 
+
+    /* Tamanho das fontes */
+
+    --side-menu-font-size: 1.4rem;
+
+    --border-Radius: 8px
 }
 
 * {
@@ -65,18 +72,148 @@ hr {
     color: #b6b6b6;
 }
 
+.logo_container {
+    width: 4rem;
+    margin: 0rem auto;
+}
+
+.logo_company {
+    width: 100%;
+}
+
 
 
 
 
 /* Estilos para telas grandes (desktops) */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+
+    .top_navbar {
+        /* display: none !important; */
+    }
+
+    .overlay {
+        display: none !important;
+    }
+
+    .li_container li p {
+        opacity: 0.5;
+    }
+
+    .narrow_lateral_navBar {
+        display: flex;
+        height: 100vh;
+        width: 7.6rem !important;
+        /* transition: width 0.9s all; */
+
+    }
+
+    .narrow_lateral_navBar:hover {
+        display: flex;
+        height: 100vh;
+        width: 25rem !important;
+    }
+
+    .lateral_navBar:hover+.li_container li p {
+        /* display: none; */
+        color: black;
+    }
+
+    /* .logo_and_icon_container {
+        margin: 1.6rem 0rem;
+    } */
+
+    .title_lateral_menu {
+        display: none;
+    }
+
+    .menu_icon:last-child {
+        display: none;
+    }
+
+
+}
+
 
 /* Estilos para telas médias (tablets) */
-@media (min-width: 768px) and (max-width: 1199px) {}
+@media (min-width: 768px) and (max-width: 1199px) {
+    html {
+        background-color: rebeccapurple !important;
+    }
+
+    .overlay {
+        display: none !important;
+    }
+
+    .menu_icon:last-child {
+        display: none;
+    }
+
+    .top_navbar {
+        display: none !important;
+    }
+
+    .narrow_lateral_navBar {
+        display: flex;
+        height: 100vh;
+        width: 7.6rem !important;
+        transition: width 0.5s all;
+
+    }
+
+    .narrow_lateral_navBar:hover {
+        display: flex;
+        height: 100vh;
+        width: 25rem !important;
+
+    }
+
+    .title_lateral_menu {
+        display: none;
+    }
+}
 
 /* Estilos para telas pequenas (smartphones) */
 @media (max-width: 767px) {}
 
 /* Estilos para telas muito pequenas (smartphones em modo retrato) */
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+    .lateral_navBar {
+        overflow: scroll;
+    }
+}
+
+@media (orientation: landscape) {
+
+    .lateral_navBar {
+        display: flex;
+        position: fixed;
+        top: 0px;
+        flex-direction: column;
+        justify-content: space-between !important;
+        height: 100vh;
+        width: 25rem;
+        overflow-y: scroll;
+    }
+
+    .lateral_navBar::-webkit-scrollbar {
+        width: 0.8rem;
+    }
+
+    .lateral_navBar::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+        border-radius: 8px;
+    }
+
+    .lateral_navBar::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 5px;
+        border: 2px solid #f1f1f1;
+    }
+
+    .lateral_navBar::-webkit-scrollbar-thumb:hover {
+        background-color: #b3b3b3;
+    }
+
+
+}
