--- a/src/index.css
+++ b/src/index.css
@@ -83,13 +83,11 @@ hr {
 
 
 
-
-
 /* Estilos para telas grandes (desktops) */
 @media (min-width: 1200px) {
 
     .top_navbar {
-        /* display: none !important; */
+        display: none !important;
     }
 
     .overlay {
@@ -104,6 +102,7 @@ hr {
         display: flex;
         height: 100vh;
         width: 7.6rem !important;
+        transform: translateX(0%);
         /* transition: width 0.9s all; */
 
     }
@@ -157,7 +156,8 @@ hr {
         display: flex;
         height: 100vh;
         width: 7.6rem !important;
-        transition: width 0.5s all;
+        /* transition: width 0.5s all; */
+        transform: translateX(0%);
 
     }
 
@@ -174,12 +174,20 @@ hr {
 }
 
 /* Estilos para telas pequenas (smartphones) */
-@media (max-width: 767px) {}
+@media (max-width: 767px) {
+    .logo_container {
+        display: none;
+    }
+}
 
 /* Estilos para telas muito pequenas (smartphones em modo retrato) */
 @media (max-width: 480px) {
     .lateral_navBar {
         overflow: scroll;
+    }
+
+    .logo_container {
+        display: none;
     }
 }
 
