--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
     --menu_color: #F5F5F5;
     --padding_icon: 1.6rem;
 
+    --logoFont: "Agbalumo", system-ui;
+
     /* Cores da Paleta de Delivery */
 
     /* Cor Principal para Botões e Chamadas de Ação */
@@ -72,14 +74,31 @@ hr {
     color: #b6b6b6;
 }
 
+
 .logo_container {
+    display: flex;
+    position: relative;
+    justify-content: center;
     width: 4rem;
-    margin: 0rem auto;
+    margin: auto;
 }
 
 .logo_company {
     width: 100%;
+    margin: 0 auto;
+    /* position: absolute; */
 }
+
+.logo_and_icon_container {
+    width: 100%;
+    /* background-color: rgb(236, 220, 252); */
+    overflow: hidden;
+}
+
+.showTextMenu {
+    opacity: 0;
+}
+
 
 
 
@@ -105,6 +124,10 @@ hr {
         transform: translateX(0%);
         /* transition: width 0.9s all; */
 
+    }
+
+    .logo_and_icon_container {
+        margin: 1.6rem 0rem;
     }
 
     .narrow_lateral_navBar:hover {
@@ -159,6 +182,10 @@ hr {
         /* transition: width 0.5s all; */
         transform: translateX(0%);
 
+    }
+
+    .logo_and_icon_container {
+        padding: 2rem 0rem;
     }
 
     .narrow_lateral_navBar:hover {
