--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -23,8 +23,8 @@ header {
     background-color: var(--menu_color);
     /* width: 0px; */
     overflow: hidden !important;
-    transition: transform 0.8s cubic-bezier(0.25, 0.8, 0.25, 1),
-        width 0.8s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1),
+        width 0.9s 0.1s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translateX(-100%);
     z-index: 10;
 }
@@ -230,6 +230,24 @@ header {
 
 .navBar_footer {
     display: flex;
-    white-space: nowrap;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    /* white-space: nowrap; */
     justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
+    /* background-color: violet; */
+
+}
+
+.navBar_footer span {
+    font-size: clamp(0.6rem, 1rem, 1.6rem);
+    text-align: center;
+    margin-right: 0.3rem;
+}
+
+.navBar_footer p {
+    font-size: clamp(0.6rem, 0.9rem, 1.6rem) !important;
+    text-align: center;
+    width: auto;
 }
