--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -6,7 +6,7 @@
 }
 
 .logo_company_on_hover {
-    width: 12rem;
-    margin: 1.2rem 0rem;
-    /* height: 100%; */
+    width: 13rem;
+    margin: 0rem 0rem;
+    height: 4rem;
 }
