--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,7 +24,7 @@ header {
     /* width: 0px; */
     overflow: hidden !important;
     transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1),
-        width 0.9s 2s cubic-bezier(0.25, 0.8, 0.25, 1);
+        width 0.9s 0.1s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translateX(-100%);
     z-index: 10;
 }
@@ -132,6 +132,7 @@ header {
     position: absolute;
     left: 1.5rem;
     align-items: center;
+
     outline: none;
     border: none;
     background-color: transparent;
@@ -212,10 +213,14 @@ header {
 }
 
 .buttons_container button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     padding: 1rem 0rem;
     border-radius: var(--border-Radius);
     border: none;
     font-size: 1.2rem;
+    white-space: nowrap;
 }
 
 .buttons_container button:last-child {
