--- a/src/index.css
+++ b/src/index.css
@@ -96,16 +96,26 @@ hr {
 }
 
 .hideTextMenu {
-    opacity: 0;
-    display: none;
+    /* visibility: hidden; */
+    opacity: 0 !important;
+    /* display: none; */
+    transition: opacity 0.1s 0.1s linear;
 }
 
 .showTextMenu {
     /* display: none; */
+    transition: opacity 0.1s 0.1s linear;
     opacity: 1;
 }
 
+.marginIcon {
+    margin-right: 1.2rem;
+    color: white;
+}
 
+.buttonIcon {
+    opacity: 0.4;
+}
 
 
 /* Estilos para telas grandes (desktops) */
@@ -140,11 +150,6 @@ hr {
         display: flex;
         height: 100vh;
         width: 25rem !important;
-    }
-
-    .lateral_navBar:hover+.li_container li p {
-        /* display: none; */
-        color: black;
     }
 
     /* .logo_and_icon_container {
