--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,10 @@
 
     --side-menu-font-size: 1.4rem;
 
-    --border-Radius: 8px
+    --border-Radius: 8px;
+    --lateral-menu-width: 7.6rem;
+
+    --opacity_transition: opacity 0.4s 0.2s cubic-bezier(0.25, 0.8, 0.25, 1)
 }
 
 * {
@@ -45,9 +48,6 @@
     padding: 0;
 }
 
-html {
-    font-size: 62.5%;
-}
 
 section {
     margin-top: 20px;
@@ -78,18 +78,24 @@ hr {
     /* visibility: hidden; */
     opacity: 0 !important;
     /* display: none; */
-    transition: opacity 0.1s 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: var(--opacity_transition);
 }
 
 .showTextMenu {
-    transition: opacity 0.1s 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: var(--opacity_transition);
     opacity: 1;
 }
 
+.section_container {
+    /* width: 100vw; */
+    margin: 0rem 0rem 0rem 7.6rem;
+    background-color: slateblue !important;
+}
 
 
 /* Estilos para telas grandes (desktops) */
 @media (min-width: 1200px) {
+
 
     .top_navbar {
         display: none !important;
@@ -103,7 +109,7 @@ hr {
     .narrow_lateral_navBar {
         display: flex;
         height: 100vh;
-        width: 7.6rem !important;
+        width: var(--lateral-menu-width) !important;
         transform: translateX(0%);
         /* transition: width 0.9s all; */
 
@@ -156,7 +162,7 @@ hr {
     .narrow_lateral_navBar {
         display: flex;
         height: 100vh;
-        width: 7.6rem !important;
+        width: var(--lateral-menu-width) !important;
         /* transition: width 0.5s all; */
         transform: translateX(0%);
 
