--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@ html {
     /* width: 100vw; */
     font-size: 62.5%;
     min-height: 150vh;
-    background-color: rgb(43, 117, 49);
+    /* background-color: rgb(43, 117, 49); */
     /* overflow-x: hidden; */
 }
 
 body {
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     /* width: 100vw; */
-    background-color: #1bd7dd !important;
+    background-color: var(--cor-fundo-menu);
 }
