--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     /* width: 100vw; */
     background-color: var(--cor-fundo-menu);
 }
