--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@ header {
     width: 100vw;
 }
 
-/* Menu top config */
+/* Menu general configs*/
 
 .top_navbar {
     display: flex;
@@ -12,6 +12,8 @@ header {
     width: 100vw;
     padding: 1rem;
     background-color: var(--menu_color);
+    /* margin: 0 auto; */
+    /* background-color: rgb(101, 247, 33); */
 }
 
 .lateral_navBar {
@@ -25,7 +27,7 @@ header {
     background-color: var(--menu_color);
     /* width: 0px; */
     overflow: hidden !important;
-    transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1),
+    transition: transform 0.2s cubic-bezier(0.25, 0.8, 0.25, 1),
         width 0.9s 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
     transform: translateX(-100%);
     z-index: 10;
@@ -65,18 +67,26 @@ header {
     display: block;
 }
 
+/* Menu bar configs */
+
 .top-menu-content {
     display: flex;
+    /* background-color: rgba(224, 228, 21, 0.342); */
 
 }
 
 .logo-top-menu {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     display: flex;
-    justify-content: end;
-    width: calc(90%) !important;
-    /* background-color: rgba(102, 51, 153, 0.342); */
+    justify-content: space-between;
+    width: calc(100% - var(--lateral-menu-width));
+    margin-left: 6.6rem !important;
+    padding: 0rem 5rem 0rem 2.8rem;
+    /* background-color: rgb(207, 167, 247); */
+    /* margin: 0px; */
+    /* border: 1px solid black */
 }
+
 
 .lateral-logo {
     width: 2.4rem;
