--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ hr {
 }
 
 .section_container {
-    width: calc(100% - 7.6rem);
+    width: calc(100% - var(--lateral-menu-width));
     margin: 0 0 0 var(--lateral-menu-width);
     transition: all 0.7s ease;
     padding: 0px 4.8rem;
@@ -134,6 +134,12 @@ hr {
     }
 
 
+    .top_navbar img {
+        display: none !important;
+    }
+
+
+
     .overlay {
         display: none !important;
     }
@@ -156,6 +162,7 @@ hr {
         display: flex;
         height: 100vh;
         width: 25rem !important;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     /* .logo_and_icon_container {
@@ -166,9 +173,12 @@ hr {
         opacity: 0;
     }
 
-    .menu_icon:last-child {
+    .menu_icon {
         display: none;
     }
+
+
+
 
 
 }
@@ -185,7 +195,8 @@ hr {
         display: none;
     }
 
-    .top_navbar {
+
+    .top_navbar img {
         display: none !important;
     }
 
@@ -213,6 +224,10 @@ hr {
         display: none;
     }
 
+    .menu_icon {
+        display: none;
+    }
+
 
 }
 
@@ -232,13 +247,37 @@ hr {
         display: none;
     }
 
-    .search-top-menu {
+    .top_navbar {
         display: flex;
-        justify-content: end;
-        /* width: 90%; */
-        background-color: #4CAF50;
-        margin-right: 2rem;
+        justify-content: space-between;
+        height: 5.6rem;
+        align-items: center;
+        width: 100%;
+        padding: 1rem;
+        background-color: var(--menu_color);
+        /* margin: 0 auto; */
+        /* background-color: rgb(101, 247, 33); */
     }
+
+
+    .search-top-menu img {
+        width: 50%;
+    }
+
+    .logo-top-menu {
+        /* margin: 0 auto; */
+        display: flex;
+        justify-content: space-between;
+        width: fit-content;
+        margin-left: 0rem !important;
+        padding: 0rem 2rem 0rem 0rem;
+        background-color: rgba(255, 216, 216, 0.932);
+    }
+
+    .logo-top-menu .search-top-menu {
+        display: none;
+    }
+
 
 
 }
