--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -5,13 +5,20 @@
 .myShoppingCard_container {
     position: fixed;
     height: 100vh;
-    width: 30rem;
+    width: 25rem;
     background: white;
     top: 0;
     right: 0rem;
     z-index: 4;
-    padding: 1.6rem;
+    padding: 2rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transform: translateX(100%);
+    transition: transform 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+}
+
+.openOrderContaiener {
+    transform: translateX(0%);
 
 }
 
@@ -19,6 +26,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 1.6rem;
     /* background-color: yellow; */
 }
 
@@ -31,4 +39,10 @@
     order: 2;
     cursor: pointer;
 
+}
+
+
+/* Seção dos pedidos */
+.orders_container {
+    background-color: wheat;
 }
