--- a/src/components/OrdersContainer/CardOrders/CardOrder.css
+++ b/src/components/OrdersContainer/CardOrders/CardOrder.css
@@ -1,13 +1,20 @@
 .orders_container .card_order {
     display: flex;
+    justify-content: space-between;
     /* height: em; */
+    /* column-gap: 0.5rem; */
+    background-color: rgb(252, 234, 214);
+    border-radius: 0.8rem;
+    padding: 0.5rem;
 }
 
 .card_order .food_img_container {
-    flex-grow: 2;
-    background-color: violet;
+    /* flex-grow: 1; */
+    /* background-color: violet; */
     margin: 0px;
-    min-width: 4.3rem;
+    width: 33%;
+    border-radius: 0.3rem;
+    overflow: hidden;
 }
 
 .food_img_container img {
@@ -18,18 +25,19 @@
 .second-part-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     flex-grow: 0.5;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .food_name {
-    width: 9rem;
+    width: 10rem;
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    padding: 0rem 0rem 0.8rem 0rem;
+    /* padding: 0rem 0rem 0.8rem 0rem; */
     /* background-color: rgb(187, 245, 176); */
-    font-weight: 600;
+    /* font-weight: 600; */
 }
 
 .number_control {
@@ -41,16 +49,37 @@
     border-radius: 0.6rem;
 }
 
-.number_control .number_button {}
+
+
+.number_control .number_button {
+    display: inline-flex;
+    align-items: center;
+}
 
 .number_control .number_button span {
     font-size: 2rem;
 }
 
 .number_control .number {
-    font-size: 1.5rem;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: clamp(1.2rem, 1.4rem, 1.6rem);
+    background-color: white;
 }
 
 .food_price_container {
-    flex-grow: 0.5
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: end;
+    /* flex-grow: 0.5 */
+    /* padding: 0rem 0.2rem; */
+}
+
+.food_price_container .food_price {
+    width: 100%;
+    font-size: clamp(1.2rem, 1.2rem, 1.6rem);
+    font-weight: 600;
+    /* background-color: rebeccapurple; */
 }
