--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -5,12 +5,12 @@
 .myShoppingCard_container {
     position: fixed;
     height: 100vh;
-    width: 25rem;
+    width: 28rem;
     background: white;
     top: 0;
     right: 0rem;
     z-index: 6;
-    padding: 2rem;
+    padding: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     transform: translateX(100%);
     transition: transform 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -44,5 +44,9 @@
 
 /* Seção dos pedidos */
 .orders_container {
-    background-color: wheat;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 1rem;
+    /* background-color: wheat; */
 }
