--- a/src/components/OrdersContainer/CardOrders/CardOrder.css
+++ b/src/components/OrdersContainer/CardOrders/CardOrder.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     /* height: em; */
-    /* column-gap: 0.5rem; */
-    background-color: rgb(252, 234, 214);
+    column-gap: 1rem;
+    /* background-color: rgb(252, 234, 214); */
     border-radius: 0.8rem;
     padding: 0.5rem;
 }
@@ -12,8 +12,8 @@
     /* flex-grow: 1; */
     /* background-color: violet; */
     margin: 0px;
-    width: 33%;
-    border-radius: 0.3rem;
+    width: 28%;
+    border-radius: 0.8rem;
     overflow: hidden;
 }
 
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-grow: 0.5;
+    flex-grow: 1;
     /* background-color: aquamarine; */
 }
 
@@ -38,15 +38,20 @@
     /* padding: 0rem 0rem 0.8rem 0rem; */
     /* background-color: rgb(187, 245, 176); */
     /* font-weight: 600; */
+    font-size: clamp(1.2rem, 1.4rem, 1.6rem) !important;
+    margin: 0px;
+    padding: 0;
 }
 
 .number_control {
     display: flex;
     align-items: center;
     border: 1px solid gray;
-    width: 7rem;
+    width: 6rem;
     justify-content: space-between;
-    border-radius: 0.6rem;
+    border-radius: 0.8rem;
+    cursor: pointer;
+    user-select: none;
 }
 
 
@@ -64,7 +69,7 @@
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    font-size: clamp(1.2rem, 1.4rem, 1.6rem);
+    font-size: clamp(1.2rem, 1.4rem, 1.6rem) !important;
     background-color: white;
 }
 
@@ -77,9 +82,13 @@
     /* padding: 0rem 0.2rem; */
 }
 
+.food_price_container span {
+    font-size: 1.8rem;
+}
+
 .food_price_container .food_price {
     width: 100%;
-    font-size: clamp(1.2rem, 1.2rem, 1.6rem);
+    font-size: clamp(1.2rem, 1.4rem, 1.6rem);
     font-weight: 600;
     /* background-color: rebeccapurple; */
 }
