--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -2,18 +2,27 @@
     cursor: pointer;
 }
 
+.infors-order-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* background-color: aquamarine; */
+    height: calc(100vh - 90px) !important;
+}
+
 .myShoppingCard_container {
     position: fixed;
-    height: 100vh;
+    min-height: 100vh !important;
     width: 28rem;
     background: white;
     top: 0;
     right: 0rem;
-    z-index: 6;
+    z-index: 4;
     padding: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     transform: translateX(100%);
-    transition: transform 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+
 
 }
 
@@ -46,7 +55,48 @@
 .orders_container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    row-gap: 1rem;
+    /* justify-content: space-between; */
+    row-gap: 1.5rem;
+    overflow-y: scroll;
+    flex-grow: 1;
     /* background-color: wheat; */
+
+}
+
+
+
+.total_orders hr {
+    margin: 1.5rem auto;
+}
+
+.fess_container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.fess_container p {
+    /* letter-spacing: 1px; */
+    font-size: 1.4rem !important;
+    /* font-weight: 600; */
+}
+
+.fess_container span {
+    /* letter-spacing: 1px; */
+    font-size: 1.3rem;
+    /* font-weight: 600; */
+}
+
+.order_total {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.order_total p {
+    font-size: 1.6rem;
+}
+
+.order_total span {
+    font-size: 1.6rem;
+    font-weight: 600;
 }
