--- a/src/components/OrdersContainer/OrderContainer.css
+++ b/src/components/OrdersContainer/OrderContainer.css
@@ -19,7 +19,7 @@
     right: 0rem;
     z-index: 4;
     padding: 1rem;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
     transform: translateX(100%);
     transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 
@@ -57,7 +57,7 @@
     flex-direction: column;
     /* justify-content: space-between; */
     row-gap: 1.5rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex-grow: 1;
     /* background-color: wheat; */
 
