--- a/src/components/carrosel/card/Card.css
+++ b/src/components/carrosel/card/Card.css
@@ -1,7 +1,52 @@
 .card_container {
+    position: relative;
     display: flex;
-    background-color: rebeccapurple;
+    justify-content: space-evenly;
+    background-color: rgb(205, 179, 231);
     /* width: 100vw; */
     /* height: 150px !important; */
-    /* border-radius: 10px; */
+    border-radius: 20px;
+    overflow: hidden;
+    /* padding: 5rem; */
+    height: 100vh;
+    border: none;
+}
+
+
+.cards_infos_container {
+    position: absolute;
+    left: 6rem;
+    top: 6rem;
+    display: flex;
+    flex-direction: column;
+    /* margin: 3rem auto; */
+    /* flex-grow: 0.5; */
+    /* padding: 6rem; */
+    justify-content: center;
+    z-index: 2;
+    color: white;
+}
+
+.Card_carousel_title {
+    font-size: clamp(1.2rem, 3.4rem, 1.6rem) !important;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.Card_corousel_subtitle {
+    font-size: 1.6rem !important;
+    width: 70%;
+}
+
+.figure_container {
+    position: absolute;
+    /* background-color: red; */
+    /* flex-grow: 1; */
+    height: 30rem !important;
+    right: 3rem;
+}
+
+.card_container img {
+    width: 100%;
+    height: 100%;
 }
