--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,5 @@
 .section-hero {
     /* height: 10vw; */
-    background-color: tomato;
+    /* background-color: tomato; */
+    /* padding: 1rem 4.5rem !important; */
 }
