--- a/src/components/carrosel/Carousel.css
+++ b/src/components/carrosel/Carousel.css
@@ -4,23 +4,18 @@
     max-width: 1171px;
     height: 30rem !important;
     /* margin: 1.6rem 0rem; */
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .slick-list .card {
     border: none;
     height: auto;
+    /* overflow: hidden; */
 }
-
-
 
 .carousel_container {
     /* width: 95% !important; */
     margin: 0 auto !important;
-}
-
-.card {
-    height: 250px;
 }
 
 
