--- a/src/components/carrosel/card/Card.css
+++ b/src/components/carrosel/card/Card.css
@@ -10,6 +10,7 @@
     /* padding: 5rem; */
     height: fit-content;
     border: none;
+    align-items: center;
 }
 
 
@@ -19,10 +20,11 @@
     /* top: 6rem; */
     display: flex;
     flex-direction: column;
+    align-items: center;
     /* margin: 3rem auto; */
     /* flex-grow: 0.5; */
-    /* padding: 6rem; */
-    /* justify-content: center; */
+    padding: 2rem;
+    justify-content: center;
     z-index: 2;
     color: white;
     min-height: 18rem;
@@ -38,22 +40,23 @@
 
 .Card_corousel_subtitle {
     font-size: 1.6rem !important;
-    width: 70%;
+    /* width: 70%; */
 }
 
 .figure_container {
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     /* position: absolute; */
     /* background-color: red; */
     /* flex-grow: 1; */
-    width: 100%;
-    height: 30em !important;
+    /* width: 100%; */
+    height: 30rem !important;
     /* max-height: 30em !important; */
-    /* right: 3rem; */
+    /* right: 0.5%; */
+    margin: 0;
 }
 
 .card_container img {
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
