--- a/src/components/carrosel/card/Card.css
+++ b/src/components/carrosel/card/Card.css
@@ -49,8 +49,8 @@
     /* position: absolute; */
     /* background-color: red; */
     /* flex-grow: 1; */
-    /* width: 100%; */
-    height: 30rem !important;
+    width: 100%;
+    height: 28rem !important;
     /* max-height: 30em !important; */
     /* right: 0.5%; */
     margin: 0;
