--- a/src/components/carrosel/Carousel.css
+++ b/src/components/carrosel/Carousel.css
@@ -2,9 +2,13 @@
     border-radius: 20px !important;
     /* z-index: 3; */
     max-width: 1171px;
-    height: 30rem !important;
+    height: 28rem !important;
     /* margin: 1.6rem 0rem; */
     /* overflow: hidden; */
+}
+
+.slick-dots li {
+    margin: 0px;
 }
 
 
@@ -18,6 +22,7 @@
     /* width: 95% !important; */
     margin: 0 auto !important;
 }
+
 
 
 /* Posicionar os botões sobre o slide */
@@ -42,7 +47,7 @@
 }
 
 .slick-dots li button::before {
-    color: var(--cor-principal) !important;
+    color: var(--cor-destaque) !important;
     /* background-color: rebeccapurple; */
 }
 
