--- a/src/components/formContainer/ModalForm.css
+++ b/src/components/formContainer/ModalForm.css
@@ -6,16 +6,23 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.616);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 1000;
     display: none;
+
+    /* visibility: hidden; */
+    /* opacity: 0; */
+    transition: visibility 0.5s ease;
+    /* z-index: 11; */
     /* Garante que o modal esteja acima de tudo */
 }
 
-.open {
+.modalOpen {
     display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* visibility: visible; */
+    /* opacity: 1; */
 }
 
 .modal-content {
@@ -29,10 +36,34 @@
 .close-button {
     position: absolute;
     top: 10px;
-    right: 4rem;
+    right: 5%;
     /* background: transparent; */
     border: none;
     font-size: 3rem;
     cursor: pointer;
     color: white !important;
+}
+
+/* Login form */
+
+.login_form_container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    height: 60%;
+    background-color: white;
+}
+
+.image-login-container {
+    /* flex-grow: 1; */
+    min-width: 100%;
+    /* width: fit-content; */
+    max-width: 500px;
+    /* height: fit-content; */
+    background-color: rebeccapurple;
+    flex-grow: 1;
+}
+
+.login_form_container form {
+    flex-grow: 2;
 }
